--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <li>Docker</li>
       <li>Ansible</li>
       <li>Python</li>
-      <li>Integração Continua</li>
+      <li>Integração Continua: Maturidade e produtividade no desenvolvimento de Software</li>
       <li>C#</li>
     </ul>
   </body>
