--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cursos Alura</title>
+    <title>Cursos De DevOps Alura</title>
   </head>
   <body>
     <ul>
       <li>Vagrancy</li>
       <li>Docker</li>
       <li>Ansible</li>
-      <li>Python</li>
+      <li>Linux</li>
       <li>Integração Continua: Maturidade e produtividade no desenvolvimento de Software</li>
-      <li>C#</li>
     </ul>
   </body>
 </html>
