Adicionando curso de Kubernetes

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <li>Python</li>
       <li>Integração Continua: Maturidade e produtividade no desenvolvimento de Software</li>
       <li>C#</li>
+      <li>Kubernetes</li>
     </ul>
   </body>
 </html>
