Correção em Curso

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <ul>
       <li>Vagrancy</li>
-      <li>Cruso de Docker: Criando containers sem dor de cabeça</li>
+      <li>Curso de Docker: Criando containers sem dor de cabeça</li>
       <li>Ansible</li>
       <li>Python</li>
       <li>Integração Continua: Maturidade e produtividade no desenvolvimento de Software</li>
