--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <ul>
-      <li>Vagrancy</li>
+      <li>Vagrancy: Gerenciando máquinas virtuais</li>
       <li>Docker: Criando containers sem dor de cabeça</li>
       <li>Ansible</li>
       <li>Linux</li>
