--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
   </head>
   <body>
     <ul>
-      <li>Vagrancy: Gerenciando máquinas virtuais</li>
-      <li>Vagrancy</li>
+      <li>Vagrant: Gerenciando máquinas virtuais</li>
       <li>Docker: Criando containers sem dor de cabeça</li>
-      <li>Curso de Docker: Criando containers sem dor de cabeça</li>
       <li>Ansible</li>
       <li>Linux</li>
       <li>Integração Continua: Maturidade e produtividade no desenvolvimento de Software</li>
-      <li>C#</li>
       <li>Kubernetes</li>
     </ul>
   </body>
