--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
       <li>Vagrant: Gerenciando máquinas virtuais</li>
       <li>Docker: Criando containers sem dor de cabeça</li>
-      <li>Ansible: Infraestrutura como código</li>
+      <li>Ansible</li>
       <li>Linux</li>
       <li>Integração Continua: Maturidade e produtividade no desenvolvimento de Software</li>
       <li>Kubernetes</li>
