Alterando nome do curso de Kubernetes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <li>Ansible</li>
       <li>Linux</li>
       <li>Integração Continua: Maturidade e produtividade no desenvolvimento de Software</li>
-      <li>Kubernetes</li>
+      <li>Kubernetes: Introdução e orquestração de containers</li>
     </ul>
   </body>
 </html>
