Titulo do curso Linux

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <li>Vagrant: Gerenciando máquinas virtuais</li>
       <li>Docker: Criando containers sem dor de cabeça</li>
       <li>Ansible: Sua infraestrutura como código</li>
-      <li>Linux</li>
+      <li>Linux: Instalação e primeiros comandos</li>
       <li>Integração Continua: Maturidade e produtividade no desenvolvimento de Software</li>
       <li>Kubernetes: Introdução e orquestração de containers</li>
     </ul>
